external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_nested_enum_incomplete.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04036]: non-exhaustive pattern
   ┌─ tests/move_2024/matching/invalid_nested_enum_incomplete.move:19:12
   │
19 │     match (o) {
   │            ^ Pattern 'Outer::A(Inner::Z)' not covered
